tests/operator/multiply_num_string.out
[31merror[error]: unsupported operand type(s) for *: 'number' and 'str'
----- Traceback -----
  ┌─ <unknown>:1:9
  | 
1 | print(3 * "Hello, world! ") # error
  |          ^
[0m