tests/operator/multiply_num_string.my
print(3 * "Hello, world! ") # error
